--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
 <body>
     <div class="wrapper">
         <div class="navbar container">
+
+            <img class="profile-picture" src="profile.png">
+
             <a id="author-name" class="alignable pull-left" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
             <ul class="alignable pull-right navbar-ul">
                 {% for x in site.data.nav %}
