--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -32,7 +32,7 @@ hr {
 
 /* Wrapper */
 .icon-button {
-    background-color: white;
+    background-color: lightgray;
     border-radius: 3.6rem;
     cursor: pointer;
     display: inline-block;
